# SMUMP326

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  pyproject.toml  show_report.sh
advanced_logic/: finite_category.py
mace4-examples/: finite-categories.ipynb  mace4-basics.ipynb  mace4-example.in  semigroups.in
mace4-examples/solutions/: boolean-algebras.in  categories.in  groups.in  lattices.in  loops.in  monoids.in  non-abelian-group.in  quasigroups.in
