[tool.poetry]
name = "smump326"
version = "0.0.1"
description = ""
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
pylint = "*"
mypy = "*"
jedi = "*"
rope = "*"
black = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["advanced_logic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
